Fixed new design

--- a/src/app/layouts/companies-list/companies-list.component.css
+++ b/src/app/layouts/companies-list/companies-list.component.css
@@ -4,3 +4,40 @@
 .btn-light{
     margin-top: 3rem;
 }
+.companies {
+    margin-top: 0px;
+}
+.search-box{
+    width: 30%;
+}
+
+element.style {}
+
+.input-group>:not(:first-child):not(.dropdown-menu):not(.valid-tooltip):not(.valid-feedback):not(.invalid-tooltip):not(.invalid-feedback) {
+    margin-left: -1px;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+}
+
+.input-group .btn {
+    position: relative;
+    z-index: 2;
+}
+
+[type=button]:not(:disabled),
+[type=reset]:not(:disabled),
+[type=submit]:not(:disabled),
+button:not(:disabled) {
+    cursor: pointer;
+}
+
+.btn {
+    border: 1px solid var(--primary-color);
+    font-size: 1rem;
+    padding: 0.81rem 2em;
+    line-height: 0;
+}
+
+.btn-light:focus{
+    color: black;
+}
