--- a/src/app/layouts/companies-list/company-details/company-details.component.html
+++ b/src/app/layouts/companies-list/company-details/company-details.component.html
@@ -21,7 +21,7 @@
                         May 2022, it is the world's second most valuable company, the fourth-largest personal computer
                         vendor by unit sales and second-largest mobile phone manufacturer.
                     </p>
-                    <a href="#reports"> <button type="button" class="btn first px-5 py-2" id="reports">PDF
+                    <a> <button type="button" class="btn first px-5 py-2" id="reports">PDF
                             Reports</button></a>
                     <a [routerLink]="['/company/report/details/sajkd&%&78hajsdk234234']" routerLinkActive="router-link-active" > <button type="button" class="btn first px-5 py-2 mx-3">View
                             Analysis</button></a>
@@ -31,62 +31,63 @@
     </div>
 </section>
 <!-- Header End -->
-<div style='margin-top: 35px;' id="showreports">
-    <div style='margin-left:75px;'>
-        <h3 style='font-size: 20px; color: #E95205; '> PDF Reports </h3>
-    </div>
-    <div class="wrapper-grey padded">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12 col-sm-4 col-md-2">
-                    <div class="card align-items-center justify-content-center">
-                        <a
-                            href="https://assets.new.siemens.com/siemens/assets/api/uuid:4806da09-01c7-40b1-af91-99af4b726653/sustainability2021-en.pdf"><img
-                                src="/assets/pdf.png" onclick="confirmAction()" alt="" width="130px"></a>
-                    </div>
-                    <div style='margin-top:10px;'>
-                        <p style='text-align: center;'>2022</p>
-                    </div>
+<div class="wrapper-grey padded">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12" id="showreports">
+                <div>
+                    <h3 style='font-size: 20px; color: #E95205; '> PDF Reports </h3>
+                    <hr>
                 </div>
-                <div class="col-xs-12 col-sm-4 col-md-2">
-                    <div class="card align-items-center justify-content-center">
-                        <img src="/assets/pdf.png" alt="" width="130px">
-                    </div>
-                    <div style='margin-top:10px;'>
-                        <p style='text-align: center;'>2021</p>
-                    </div>
+            </div>
+            <div class="col-xs-12 col-sm-4 col-md-2">
+                <div class="card align-items-center justify-content-center">
+                    <a
+                        href="https://assets.new.siemens.com/siemens/assets/api/uuid:4806da09-01c7-40b1-af91-99af4b726653/sustainability2021-en.pdf"><img
+                            src="/assets/img/pdf.png" onclick="confirmAction()" alt="" width="130px"></a>
                 </div>
-                <div class="col-xs-12 col-sm-4 col-md-2">
-                    <div class="card align-items-center justify-content-center">
-                        <img src="/assets/pdf.png" alt="" width="130px">
-                    </div>
-                    <div style='margin-top:10px;'>
-                        <p style='text-align: center;'>2020</p>
-                    </div>
+                <div style='margin-top:10px;'>
+                    <p style='text-align: center;'>2022</p>
                 </div>
-                <div class="col-xs-12 col-sm-4 col-md-2">
-                    <div class="card align-items-center justify-content-center">
-                        <img src="/assets/pdf.png" alt="" width="130px">
-                    </div>
-                    <div style='margin-top:10px;'>
-                        <p style='text-align: center;'>2019</p>
-                    </div>
+            </div>
+            <div class="col-xs-12 col-sm-4 col-md-2">
+                <div class="card align-items-center justify-content-center">
+                    <img src="/assets/img/pdf.png" alt="" width="130px">
                 </div>
-                <div class="col-xs-12 col-sm-4 col-md-2">
-                    <div class="card align-items-center justify-content-center">
-                        <img src="/assets/pdf.png" alt="" width="130px">
-                    </div>
-                    <div style='margin-top:10px;'>
-                        <p style='text-align: center;'>2018</p>
-                    </div>
+                <div style='margin-top:10px;'>
+                    <p style='text-align: center;'>2021</p>
                 </div>
-                <div class="col-xs-12 col-sm-4 col-md-2">
-                    <div class="card align-items-center justify-content-center">
-                        <img src="/assets/pdf.png" alt="" width="130px">
-                    </div>
-                    <div style='margin-top:10px;'>
-                        <p style='text-align: center;'>2017</p>
-                    </div>
+            </div>
+            <div class="col-xs-12 col-sm-4 col-md-2">
+                <div class="card align-items-center justify-content-center">
+                    <img src="/assets/img/pdf.png" alt="" width="130px">
+                </div>
+                <div style='margin-top:10px;'>
+                    <p style='text-align: center;'>2020</p>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-4 col-md-2">
+                <div class="card align-items-center justify-content-center">
+                    <img src="/assets/img/pdf.png" alt="" width="130px">
+                </div>
+                <div style='margin-top:10px;'>
+                    <p style='text-align: center;'>2019</p>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-4 col-md-2">
+                <div class="card align-items-center justify-content-center">
+                    <img src="/assets/img/pdf.png" alt="" width="130px">
+                </div>
+                <div style='margin-top:10px;'>
+                    <p style='text-align: center;'>2018</p>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-4 col-md-2">
+                <div class="card align-items-center justify-content-center">
+                    <img src="/assets/img/pdf.png" alt="" width="130px">
+                </div>
+                <div style='margin-top:10px;'>
+                    <p style='text-align: center;'>2017</p>
                 </div>
             </div>
         </div>
