--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -12,15 +12,24 @@
 
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item px-3 py-2">
+                <li class="nav-item px-1 py-2">
                     <a class="nav-link active" aria-current="page" [routerLink]="['/about-us']" routerLinkActive="router-link-active" >About Us</a>
                 </li>
-                <li class="nav-item px-3 py-2">
+                <li class="nav-item px-1 py-2">
                     <a [routerLink]="['/company/list']" routerLinkActive="router-link-active"  class="nav-link">Companies</a>
                 </li>
-                <li class="nav-item px-3 py-2 py-2">
-                    <a [routerLink]="['/company/report/details']" routerLinkActive="router-link-active"  class="nav-link">Reports</a>
+                <li class="nav-item px-1 py-2 py-2">
+                    <a [routerLink]="['/company/report/details/&5463']" routerLinkActive="router-link-active"  class="nav-link">Dashboard</a>
                 </li>
+                <li class="nav-item px-1 py-2 py-2">
+                    <a [routerLink]="['/emission/reports']" routerLinkActive="router-link-active" class="nav-link">Emission Reports</a>
+                </li>
+                <li class="nav-item px-1 py-2 py-2">
+                    <a [routerLink]="['repository/view']" routerLinkActive="router-link-active" class="nav-link">PDF
+                        Repository</a>
+                </li>
+
+                
                 <!-- <li class="nav-item dropdown px-3 py-2">
                     <div class="dropdown">
                         <a class="nav-link">Language</a>
