--- a/src/app/layouts/home/sustainability-report/sustainability-report.component.html
+++ b/src/app/layouts/home/sustainability-report/sustainability-report.component.html
@@ -4,8 +4,8 @@
         <div class="row">
             <!-- Left-Side -->
             <div class="col-md-6 col-sm-12  left">
-                <h1 class="heading"><span>S</span>ustainability</h1>
-                <h1 class="heading"><span>R</span>eport <span>A</span>nalyzer</h1>
+                <h1 class="heading"><span>G</span>erman</h1>
+                <h1 class="heading"><span>S</span>ustainability <span>M</span>onitor</h1>
                 <p>
                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
                     the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
