--- a/src/app/layouts/company-report-details/company-report-details.component.html
+++ b/src/app/layouts/company-report-details/company-report-details.component.html
@@ -12,10 +12,11 @@
             <div class="test-div">
                 <!-- test-div not needed -->
                 <select class="form-select wsol-select" aria-label="Default select example">
-                    <option selected>Open this select menu</option>
-                    <option value="1">One</option>
-                    <option value="2">Two</option>
-                    <option value="3">Three</option>
+                    <option selected>Years</option>
+                    <option value="1">2018</option>
+                    <option value="2">2019</option>
+                    <option value="3">2020</option>
+                    <option value="3">2021</option>
                 </select>
             </div>
         </div>
@@ -32,12 +33,6 @@
                                 [xAxis]="xAxis" [valueAxis]="valueAxis" [seriesGroups]="seriesGroups1"></smart-chart>
                         </div>
     
-                        <div class="content">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris. <a
-                                href="#">@bulmaio</a>. <a href="#">#css</a> <a href="#">#responsive</a>
-                            <br>
-                            <small>11:09 PM - 11 Jun 2022</small>
-                        </div>
                     </div>
                 </div>
                 <!--end card here-->
@@ -63,12 +58,6 @@
                             </div>
                         </div>
     
-                        <div class="content">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris. <a
-                                href="#">@bulmaio</a>. <a href="#">#css</a> <a href="#">#responsive</a>
-                            <br>
-                            <small>11:09 PM - 11 Jun 2022</small>
-                        </div>
                     </div>
                 </div>
                 <!--end card here-->
@@ -93,12 +82,6 @@
                             </div>
                         </div>
         
-                        <div class="content">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris. <a
-                                href="#">@bulmaio</a>. <a href="#">#css</a> <a href="#">#responsive</a>
-                            <br>
-                            <small>11:09 PM - 11 Jun 2022</small>
-                        </div>
                     </div>
                 </div>
                 <!--end card here-->
@@ -124,12 +107,60 @@
                             </div>
                         </div>
         
-                        <div class="content">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris. <a
-                                href="#">@bulmaio</a>. <a href="#">#css</a> <a href="#">#responsive</a>
-                            <br>
-                            <small>11:09 PM - 11 Jun 2022</small>
+                    </div>
+                </div>
+                <!--end card here-->
+            </div>
+        </div>
+
+        <!-- charts5 -->
+        <div class="col-md-6">
+            <div class="column">
+                <!--start card here-->
+                <div class="card">
+                    <div class="card-image">
+                    </div>
+                    <div class="card-content">
+                        <div class="media">
+                            <div class="media-left">
+                            </div>
+                            <div class="media-content">
+                                <div class="media">
+                                    <smart-chart #chart id="chart" [borderLineColor]="borderLineColor5" [caption]="caption5"
+                                        [description]="description5" [showLegend]="showLegend5" [padding]="padding5"
+                                        [titlePadding]="titlePadding5" [dataSource]="dataSource5" [xAxis]="xAxis5"
+                                        [valueAxis]="valueAxis5" [seriesGroups]="seriesGroups55"></smart-chart>
+                                </div>
+                            </div>
                         </div>
+        
+                    </div>
+                </div>
+                <!--end card here-->
+            </div>
+        </div>
+
+        <!-- charts6 -->
+        <div class="col-md-6">
+            <div class="column">
+                <!--start card here-->
+                <div class="card">
+                    <div class="card-image">
+                    </div>
+                    <div class="card-content">
+                        <div class="media">
+                            <div class="media-left">
+                            </div>
+                            <div class="media-content">
+                                <div class="media">
+                                    <smart-chart #chart id="chart" [borderLineColor]="borderLineColor6" [caption]="caption6"
+                                        [description]="description6" [showLegend]="showLegend6" [padding]="padding6"
+                                        [titlePadding]="titlePadding6" [dataSource]="dataSource6" [xAxis]="xAxis6"
+                                        [valueAxis]="valueAxis6" [seriesGroups]="seriesGroups66"></smart-chart>
+                                </div>
+                            </div>
+                        </div>
+        
                     </div>
                 </div>
                 <!--end card here-->
