--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -1,58 +1,8 @@
 <!-- Footer start -->
 <footer id="footer" class="footer">
-
-    <div class="footer-top">
-        <div class="container">
-            <div class="row gy-4">
-                <div class="col-lg-5 col-md-12 footer-info">
-                    <a href="index.html" class="logo d-flex align-items-center">
-                        <img src="/assets/logo1.png" alt="" width="70%">
-                    </a>
-                    <p class="py-3">Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa
-                        magna derita
-                        valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
-                    <div class="social-links mt-3">
-                        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-                        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-                        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-                        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
-                    </div>
-                </div>
-
-                <div class="col-lg-2 col-6 footer-links">
-                    <h4>Useful Links</h4>
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="about_us.html">About us</a></li>
-                        <li><a href="companies.html">Companies</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#">Terms of service</a></li>
-                        <li><a href="#">Privacy policy</a></li>
-                    </ul>
-                </div>
-
-                <div class="col-lg-2 col-6 footer-links">
-                    <h4>Our Services</h4>
-                    <ul>
-                        <li> <a href="#">Web Design</a></li>
-                        <li> <a href="#">Web Development</a></li>
-                        <li> <a href="#">Marketing</a></li>
-                        <li> <a href="#">Graphic Design</a></li>
-                    </ul>
-                </div>
-
-                <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
-                    <h4>Contact Us</h4>
-                </div>
-
-            </div>
-        </div>
-    </div>
-
-    <hr class="line2">
-    <div class="container copy1">
+    <div class="container copy1 text-center">
         <div class="copyright">
-            &copy; Copyright <strong><span>ECGAnalyzer</span></strong>. All Rights Reserved
+            &copy; Copyright <strong><span>Frankfurt University of Applied Sciences</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
             Designed by <a href="https://bootstrapmade.com/">Priyank</a>
