--- a/src/app/layouts/home/measures-static-data-section/measures-static-data-section.component.html
+++ b/src/app/layouts/home/measures-static-data-section/measures-static-data-section.component.html
@@ -2,62 +2,101 @@
 <section class="measures">
     <div class="container">
         <div class="row">
-            <!-- Left-Side -->
-            <div class="col-md-4 col-sm-12 text-right">
-                <h1 class="font-weight-bold heading"><span>W</span>hich</h1>
-                <h1 class="font-weight-bold heading"><span>M</span>easures<span>?</span></h1>
+            <div class="row">
+                <div class="col-md-12">
+                    <h2 class="font-weight-bold heading"><span>K</span>ey <span>P</span>erformance
+                        <span>I</span>ndicators<span>?</span></h2>
+                    <div class="col-md-1 line"></div>
+                </div>
             </div>
-            <!-- Middle-Side -->
-            <div class="col-md-1 line">
-
+            <div class="col-md-4 col-sm-4">
+                <div class="cards">
+                    <div class="card -ochre"><span>Lorem ipsum dolor sit amet
+                            consectetur...</span></div>
+                </div>
             </div>
-            <!-- Rigth-Side -->
-            <div class="col-md-7 col-sm-12">
-                <!-- #M1 -->
-                <div class="row py-2">
-                    <div class="col-md-3">
-                        <img src="/assets/co2.png" alt="" width="80%">
-                    </div>
-                    <div class="col-md-9">
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-                            has been the industry's standard dummy text ever since the 1500s, when an unknown
-                            printer took a galley of type and scrambled it to make
-                        </p>
-                    </div>
+            <div class="col-md-4 col-sm-4">
+                <div class="cards">
+                    <div class="card -tomato"><span>Lorem ipsum dolor sit amet
+                            consectetur...</span></div>
                 </div>
-                <!-- #M2 -->
-                <div class="row py-2">
-                    <div class="col-md-9">
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-                            has been the industry's standard dummy text ever since the 1500s, when an unknown
-                            printer took a galley of type and scrambled it to make
-                        </p>
-                    </div>
-                    <div class="col-md-3 ">
-                        <img src="/assets/employees.png" alt="" width="80%">
-                    </div>
+            </div>
+            <div class="col-md-4 col-sm-4">
+                <div class="cards">
+                    <div class="card -ochre"><span>Lorem ipsum dolor sit amet
+                            consectetur...</span></div>
                 </div>
-                <!-- #M3 -->
-                <div class="row py-2">
-                    <div class="col-md-3">
-                        <img src="/assets/water.png" alt="" width="80%">
-                    </div>
-                    <div class="col-md-9">
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-                            has been the industry's standard dummy text ever since the 1500s, when an unknown
-                            printer took a galley of type and scrambled it to make </p>
-                    </div>
+            </div>
+            <div class="col-md-3 col-sm-3 offset-md-1">
+                <div class="cards">
+                    <div class="card -tomato"><span>Lorem ipsum dolor sit
+                            amet...</span></div>
                 </div>
-                <!-- #M4 -->
-                <div class="row py-2">
-                    <div class="col-md-9">
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-                            has been the industry's standard dummy text ever since the 1500s, when an unknown
-                            printer took a galley of type and scrambled it to make </p>
-                    </div>
-                    <div class="col-md-3">
-                        <img src="/assets/death.png" alt="" width="80%">
-                    </div>
+            </div>
+            <div class="col-md-4 col-sm-4">
+                <div class="cards">
+                    <div class="card -ochre"><span>Lorem ipsum dolor sit amet
+                            consectetur...</span></div>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-3">
+                <div class="cards">
+                    <div class="card -ochre"><span>Lorem ipsum dolor sit
+                            amet...</span></div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-4">
+                <div class="cards">
+                    <div class="card -tomato"><span>Lorem ipsum dolor sit amet
+                            consectetur...</span></div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-4">
+                <div class="cards">
+                    <div class="card -ochre"><span>Lorem ipsum dolor sit amet
+                            consectetur...</span></div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-4">
+                <div class="cards">
+                    <div class="card -tomato"><span>Lorem ipsum dolor sit amet
+                            consectetur...</span></div>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-3 offset-md-1">
+                <div class="cards">
+                    <div class="card -ochre"><span>Lorem ipsum dolor sit
+                            amet...</span></div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-4">
+                <div class="cards">
+                    <div class="card -tomato"><span>Lorem ipsum dolor sit amet
+                            consectetur...</span></div>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-3">
+                <div class="cards">
+                    <div class="card -ochre"><span>Lorem ipsum dolor sit
+                            amet...</span></div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-4">
+                <div class="cards">
+                    <div class="card -tomato"><span>Lorem ipsum dolor sit amet
+                            consectetur...</span></div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-4">
+                <div class="cards">
+                    <div class="card -ochre"><span>Lorem ipsum dolor sit amet
+                            consectetur...</span></div>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-4">
+                <div class="cards">
+                    <div class="card -tomato"><span>Lorem ipsum dolor sit amet
+                            consectetur...</span></div>
                 </div>
             </div>
         </div>
