add dashboard and pdf file download

--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -19,7 +19,7 @@
                     <a [routerLink]="['/company/list']" routerLinkActive="router-link-active"  class="nav-link">Companies</a>
                 </li>
                 <li class="nav-item px-1 py-2 py-2">
-                    <a [routerLink]="['/company/report/details/&5463']" routerLinkActive="router-link-active"  class="nav-link">Dashboard</a>
+                    <a [routerLink]="['/dashboard']" routerLinkActive="router-link-active"  class="nav-link">Dashboard</a>
                 </li>
                 <li class="nav-item px-1 py-2 py-2">
                     <a [routerLink]="['/emission/reports']" routerLinkActive="router-link-active" class="nav-link">Emission Reports</a>
