--- a/src/app/repository-view/repository-view.component.html
+++ b/src/app/repository-view/repository-view.component.html
@@ -50,13 +50,10 @@
                         </div>
                         <div class="folder-name">Company-name</div>
                     </button>
-                </div>
-                <div class="d-inline-flex">
-                    <button class="folder-container">
-                        <div class="folder-icon">
-                            <i class="fa fa-folder folder-icon-color"></i>
-                        </div>
-                        <div class="folder-name">Company-name</div>
+                      <button class="folder-container-dwn">
+                        <!-- <div class="folder-icon">
+                            <i class="fa fa-download download-icon-color"></i>
+                        </div> -->
                     </button>
                 </div>
                 <div class="d-inline-flex">
@@ -65,6 +62,24 @@
                             <i class="fa fa-folder folder-icon-color"></i>
                         </div>
                         <div class="folder-name">Company-name</div>
+                    </button>
+                      <button class="folder-container-dwn">
+                        <!-- <div class="folder-icon">
+                            <i class="fa fa-download download-icon-color"></i>
+                        </div> -->
+                    </button>
+                </div>
+                <div class="d-inline-flex">
+                    <button class="folder-container">
+                        <div class="folder-icon">
+                            <i class="fa fa-folder folder-icon-color"></i>
+                        </div>
+                        <div class="folder-name">Company-name</div>
+                    </button>
+                      <button class="folder-container-dwn">
+                        <!-- <div class="folder-icon">
+                            <i class="fa fa-download download-icon-color"></i>
+                        </div> -->
                     </button>
                 </div>
                 <div class="d-inline-flex">
@@ -73,6 +88,11 @@
                             <i class="fa fa-folder folder-icon-color"></i>
                         </div>
                         <div class="folder-name">Folder-name-large</div>
+                    </button>
+                    <button class="folder-container-dwn">
+                        <!-- <div class="folder-icon">
+                            <i class="fa fa-download download-icon-color"></i>
+                        </div> -->
                     </button>
                 </div>
                 <div class="d-inline-flex">
@@ -83,13 +103,10 @@
                         <div class="folder-name">Folder-name-extra-large
                         </div>
                     </button>
-                </div>
-                <div class="d-inline-flex">
-                    <button class="folder-container">
-                        <div class="folder-icon">
-                            <i class="fa fa-folder folder-icon-color"></i>
-                        </div>
-                        <div class="folder-name">Company-name</div>
+                    <button class="folder-container-dwn">
+                        <!-- <div class="folder-icon">
+                            <i class="fa fa-download download-icon-color"></i>
+                        </div> -->
                     </button>
                 </div>
                 <div class="d-inline-flex">
@@ -99,13 +116,10 @@
                         </div>
                         <div class="folder-name">Company-name</div>
                     </button>
-                </div>
-                <div class="d-inline-flex">
-                    <button class="folder-container">
-                        <div class="folder-icon">
-                            <i class="fa fa-folder folder-icon-color"></i>
-                        </div>
-                        <div class="folder-name">Company-name</div>
+                      <button class="folder-container-dwn">
+                        <!-- <div class="folder-icon">
+                            <i class="fa fa-download download-icon-color"></i>
+                        </div> -->
                     </button>
                 </div>
                 <div class="d-inline-flex">
@@ -115,6 +129,11 @@
                         </div>
                         <div class="folder-name">Company-name</div>
                     </button>
+                      <button class="folder-container-dwn">
+                        <!-- <div class="folder-icon">
+                            <i class="fa fa-download download-icon-color"></i>
+                        </div> -->
+                    </button>
                 </div>
                 <div class="d-inline-flex">
                     <button class="folder-container">
@@ -122,6 +141,37 @@
                             <i class="fa fa-folder folder-icon-color"></i>
                         </div>
                         <div class="folder-name">Company-name</div>
+                    </button>
+                      <button class="folder-container-dwn">
+                        <!-- <div class="folder-icon">
+                            <i class="fa fa-download download-icon-color"></i>
+                        </div> -->
+                    </button>
+                </div>
+                <div class="d-inline-flex">
+                    <button class="folder-container">
+                        <div class="folder-icon">
+                            <i class="fa fa-folder folder-icon-color"></i>
+                        </div>
+                        <div class="folder-name">Company-name</div>
+                    </button>
+                      <button class="folder-container-dwn">
+                        <!-- <div class="folder-icon">
+                            <i class="fa fa-download download-icon-color"></i>
+                        </div> -->
+                    </button>
+                </div>
+                <div class="d-inline-flex">
+                    <button class="folder-container">
+                        <div class="folder-icon">
+                            <i class="fa fa-folder folder-icon-color"></i>
+                        </div>
+                        <div class="folder-name">Company-name</div>
+                    </button>
+                      <button class="folder-container-dwn">
+                        <!-- <div class="folder-icon">
+                            <i class="fa fa-download download-icon-color"></i>
+                        </div> -->
                     </button>
                 </div>
             </div>
@@ -140,7 +190,11 @@
                         <div class="folder-icon">
                             <i class="fa fa-file file-icon-color"></i>
                         </div>
-                        <div class="folder-name">Company-name</div>
+                        <div class="folder-name">
+                            <a title="Download" href="/assets/reports/November-2014-BUYING-OR-SELLING-YOUR-BUSINESS.pdf" download rel="noopener noreferrer" target="_blank">
+                                SAP.pdf
+                            </a>
+                        </div>
                     </button>
                 </div>
                 <div class="d-inline-flex">
@@ -148,7 +202,12 @@
                         <div class="folder-icon">
                             <i class="fa fa-file file-icon-color"></i>
                         </div>
-                        <div class="folder-name">Company-name-hyper-extra-large-1235445684121384513</div>
+                        <div class="folder-name">
+                            <a title="Download" href="/assets/reports/idc-wp-247829.pdf" download rel="noopener noreferrer"
+                                target="_blank">
+                                idc-wp-247829.pdf
+                            </a>
+                        </div>
                     </button>
                 </div>
                 <div class="d-inline-flex">
@@ -156,7 +215,11 @@
                         <div class="folder-icon">
                             <i class="fa fa-file file-icon-color"></i>
                         </div>
-                        <div class="folder-name">File-name</div>
+                        <div class="folder-name">
+                            <a title="Download" href="/assets/reports/marts_current.pdf" download rel="noopener noreferrer" target="_blank">
+                                marts_current.pdf
+                            </a>
+                        </div>
                     </button>
                 </div>
             </div>
