--- a/src/app/layouts/home/company/company.component.html
+++ b/src/app/layouts/home/company/company.component.html
@@ -10,7 +10,7 @@
         <div class="wrapper-grey padded">
             <div class="container">
                 <div class="row">
-                    <div class="col-xs-12 col-sm-4 col-md-2" *ngFor="let cmp of companies">
+                    <div class="col-xs-12 col-sm-4 col-md-2" *ngFor="let cmp of selectedCompanies">
                         <app-company-card [company]="cmp" ></app-company-card>
                     </div>
                 </div>
