--- a/src/app/layouts/home/measures-static-data-section/measures-static-data-section.component.html
+++ b/src/app/layouts/home/measures-static-data-section/measures-static-data-section.component.html
@@ -5,98 +5,84 @@
             <div class="row">
                 <div class="col-md-12">
                     <h2 class="font-weight-bold heading"><span>K</span>ey <span>P</span>erformance
-                        <span>I</span>ndicators<span>?</span></h2>
+                        <span>I</span>ndicators<span>?</span>
+                    </h2>
                     <div class="col-md-1 line"></div>
                 </div>
             </div>
             <div class="col-md-4 col-sm-4">
                 <div class="cards">
-                    <div class="card -ochre"><span>Lorem ipsum dolor sit amet
-                            consectetur...</span></div>
+                    <div class="card -ochre"><span>GHG Emissions</span></div>
                 </div>
             </div>
             <div class="col-md-4 col-sm-4">
                 <div class="cards">
-                    <div class="card -tomato"><span>Lorem ipsum dolor sit amet
-                            consectetur...</span></div>
+                    <div class="card -tomato"><span>Renewable Energy</span></div>
                 </div>
             </div>
             <div class="col-md-4 col-sm-4">
                 <div class="cards">
-                    <div class="card -ochre"><span>Lorem ipsum dolor sit amet
-                            consectetur...</span></div>
+                    <div class="card -ochre"><span>Energy Consumption</span></div>
                 </div>
             </div>
             <div class="col-md-3 col-sm-3 offset-md-1">
                 <div class="cards">
-                    <div class="card -tomato"><span>Lorem ipsum dolor sit
-                            amet...</span></div>
+                    <div class="card -tomato"><span>Total Water</span></div>
                 </div>
             </div>
             <div class="col-md-4 col-sm-4">
                 <div class="cards">
-                    <div class="card -ochre"><span>Lorem ipsum dolor sit amet
-                            consectetur...</span></div>
+                    <div class="card -ochre"><span>Recycled Waste</span></div>
                 </div>
             </div>
             <div class="col-md-3 col-sm-3">
                 <div class="cards">
-                    <div class="card -ochre"><span>Lorem ipsum dolor sit
-                            amet...</span></div>
+                    <div class="card -ochre"><span>Water Consumption</span></div>
                 </div>
             </div>
             <div class="col-md-4 col-sm-4">
                 <div class="cards">
-                    <div class="card -tomato"><span>Lorem ipsum dolor sit amet
-                            consectetur...</span></div>
+                    <div class="card -tomato"><span>Total Watse Water</span></div>
                 </div>
             </div>
             <div class="col-md-4 col-sm-4">
                 <div class="cards">
-                    <div class="card -ochre"><span>Lorem ipsum dolor sit amet
-                            consectetur...</span></div>
+                    <div class="card -ochre"><span>Employees</span></div>
                 </div>
             </div>
             <div class="col-md-4 col-sm-4">
                 <div class="cards">
-                    <div class="card -tomato"><span>Lorem ipsum dolor sit amet
-                            consectetur...</span></div>
+                    <div class="card -tomato"><span>Female Employees</span></div>
                 </div>
             </div>
             <div class="col-md-3 col-sm-3 offset-md-1">
                 <div class="cards">
-                    <div class="card -ochre"><span>Lorem ipsum dolor sit
-                            amet...</span></div>
+                    <div class="card -ochre"><span>Fuel Consumption</span></div>
                 </div>
             </div>
             <div class="col-md-4 col-sm-4">
                 <div class="cards">
-                    <div class="card -tomato"><span>Lorem ipsum dolor sit amet
-                            consectetur...</span></div>
+                    <div class="card -tomato"><span>Donations</span></div>
                 </div>
             </div>
             <div class="col-md-3 col-sm-3">
                 <div class="cards">
-                    <div class="card -ochre"><span>Lorem ipsum dolor sit
-                            amet...</span></div>
+                    <div class="card -ochre"><span>Contributions to political parties</span></div>
                 </div>
             </div>
             <div class="col-md-4 col-sm-4">
                 <div class="cards">
-                    <div class="card -tomato"><span>Lorem ipsum dolor sit amet
-                            consectetur...</span></div>
+                    <div class="card -tomato"><span>Spending on legal proceedings</span></div>
                 </div>
             </div>
             <div class="col-md-4 col-sm-4">
                 <div class="cards">
-                    <div class="card -ochre"><span>Lorem ipsum dolor sit amet
-                            consectetur...</span></div>
+                    <div class="card -ochre"><span>Spending on Fines</span></div>
                 </div>
             </div>
             <div class="col-md-4 col-sm-4">
                 <div class="cards">
-                    <div class="card -tomato"><span>Lorem ipsum dolor sit amet
-                            consectetur...</span></div>
+                    <div class="card -tomato"><span>Female Managers</span></div>
                 </div>
             </div>
         </div>
