--- a/src/app/layouts/home/sustainability-report/sustainability-report.component.html
+++ b/src/app/layouts/home/sustainability-report/sustainability-report.component.html
@@ -12,8 +12,10 @@
                     of type and scrambled it to make a type specimen book. It has survived not only five centuries,
                     but also the leap into electronic typesetting, remaining essentially unchanged.
                 </p>
-                <button type="button" class="btn first px-5 py-2">More Details</button>
-                <button type="button" class="btn first px-5 py-2 mx-3">View Reports</button>
+                <!-- <button type="button" class="btn first px-5 py-2">More Details</button> -->
+                <a routerLink="/dashboard"><button type="button" class="btn first px-5 py-2 mx-3">
+                    View Reports</button>
+                </a>
             </div>
             <!-- Rigth-Side -->
             <div class="col-md-6 col-sm-12 right">
