--- a/src/app/layouts/home/team/team.component.html
+++ b/src/app/layouts/home/team/team.component.html
@@ -12,35 +12,7 @@
                 <div class="col-md-8">
                     <div class="row">
                         <div class="row">
-                            <div class="col-xs-12 col-sm-4 col-md-3" *ngFor="let userTeam of teams">
-                                    <app-team-card [user]="userTeam"></app-team-card>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row" id="team2">
-                <div class="col-md-8">
-                    <div class="row">
-                        <div class="row">
-                        <div class="col-xs-12 col-sm-4 col-md-3" *ngFor="let userTeam of teams">
-                            <app-team-card [user]="userTeam"></app-team-card>
-                        </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <h1><span id="number">2.</span> Data Extraction</h1>
-                </div>
-            </div>
-            <div class="row" id="team1">
-                <div class="col-md-4">
-                    <h1><span id="number">3.</span> Data Visualization</h1>
-                </div>
-                <div class="col-md-8">
-                    <div class="row">
-                        <div class="row">
-                            <div class="col-xs-12 col-sm-4 col-md-3" *ngFor="let userTeam of teams">
+                            <div class="col-xs-12 col-sm-4 col-md-3" *ngFor="let userTeam of teams1">
                                 <app-team-card [user]="userTeam"></app-team-card>
                             </div>
                         </div>
@@ -51,7 +23,35 @@
                 <div class="col-md-8">
                     <div class="row">
                         <div class="row">
-                            <div class="col-xs-12 col-sm-4 col-md-3" *ngFor="let userTeam of teams">
+                            <div class="col-xs-12 col-sm-4 col-md-3" *ngFor="let userTeam of teams2">
+                                <app-team-card [user]="userTeam"></app-team-card>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <h1><span id="number">2.</span> Data Extraction</h1>
+                </div>
+            </div>
+            <div class="row" id="team1">
+                <div class="col-md-4">
+                    <h1><span id="number">3.</span> Visualization</h1>
+                </div>
+                <div class="col-md-8">
+                    <div class="row">
+                        <div class="row">
+                            <div class="col-xs-12 col-sm-4 col-md-3" *ngFor="let userTeam of teams3">
+                                <app-team-card [user]="userTeam"></app-team-card>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row" id="team2">
+                <div class="col-md-8">
+                    <div class="row">
+                        <div class="row">
+                            <div class="col-xs-12 col-sm-4 col-md-3" *ngFor="let userTeam of teams4">
                                 <app-team-card [user]="userTeam"></app-team-card>
                             </div>
                         </div>
