--- a/src/app/comman/team-card/team-card.component.css
+++ b/src/app/comman/team-card/team-card.component.css
@@ -1,11 +1,11 @@
 .team__item {
     /* height: 480px; */
-        /* position: relative; */
-        z-index: 1;
-        /* margin-bottom: 30px; */
-        overflow: hidden;
-        /* background-position: center; */
-        background-size: cover;
+    /* position: relative; */
+    z-index: 1;
+    /* margin-bottom: 30px; */
+    overflow: hidden;
+    /* background-position: center; */
+    background-size: cover;
 }
 
 .team__item:after {
@@ -33,7 +33,7 @@
 }
 
 .team__item:hover .team__text .team__title {
-    border-bottom: 0px solid rgba(183, 183, 183, 0.2);
+    border-bottom: 0px solid #E95205;
     padding: 0 0 26px;
     margin-bottom: 26px;
     opacity: 0;
@@ -72,9 +72,10 @@
 }
 
 .team__text .team__title h4 {
-    color: #fff;
-    font-weight: 700;
-    margin-bottom: 10px;
+        color: #fff;
+            font-weight: 900;
+            margin-bottom: 10px;
+            font-size: large;
 }
 
 .team__text .team__title span {
@@ -114,7 +115,7 @@
     -webkit-transition: all, .3s;
     -o-transition: all, .3s;
     transition: all, .3s;
-  ;
+    margin-left: 10px;
 }
 
 .team__text .team__social a:last-child {
