--- a/src/app/comman/team-card/team-card.component.html
+++ b/src/app/comman/team-card/team-card.component.html
@@ -1,15 +1,11 @@
-
-
-<div class="card cursor-pointer align-items-center justify-content-center team__item" 
+<div class="card cursor-pointer align-items-center justify-content-center team__item"
     style="background-image: url({{user?.image}});">
     <div class="team__text">
         <div class="team__title">
             <h4>{{user?.name}}</h4>
         </div>
         <div class="team__social">
-            <a href="#"><i class="bi bi-facebook"></i></a>
-            <a href="#"><i class="bi bi-twitter"></i></a>
-            <a href="#"><i class="bi bi-instagram"></i></a>
+            <a href="{{user?.social_link}}" target="_blank"><i class="bi bi-linkedin"></i></a>
         </div>
     </div>
 </div>
