--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -21,9 +21,9 @@
                 <li class="nav-item px-1 py-2 py-2">
                     <a [routerLink]="['/dashboard']" routerLinkActive="router-link-active"  class="nav-link">Dashboard</a>
                 </li>
-                <li class="nav-item px-1 py-2 py-2">
+                <!-- <li class="nav-item px-1 py-2 py-2">
                     <a [routerLink]="['/emission/reports']" routerLinkActive="router-link-active" class="nav-link">Emission Reports</a>
-                </li>
+                </li> -->
                 <li class="nav-item px-1 py-2 py-2">
                     <a [routerLink]="['repository/view']" routerLinkActive="router-link-active" class="nav-link">PDF
                         Repository</a>
