--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -70,6 +70,8 @@ section {
     background-color: var(--primary-color);
 }
 
+
+
 .navbar .container h3 {
     color: white;
 }
@@ -108,7 +110,7 @@ section {
 }
 
 .custom-toggler .navbar-toggler-icon {
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(191, 220, 234, 0.5)' stroke-width='3' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(191, 220, 234, 0.5)' stroke-width='3' stroke-linecap='round' stroke-miterlimit='5' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
 
 .custom-toggler.navbar-toggler {
@@ -187,7 +189,7 @@ section {
 .card {
     height: 180px;
     width: 180px;
-    /* box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px; */
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
     background-size: cover !important;
     color: white;
     position: relative;
@@ -195,22 +197,32 @@ section {
     cursor: pointer;
 }
 
-.card>img{
-    margin-bottom: 10px;
+.card>img {
+    margin-bottom: 50px;
+    padding: 15px;
 }
-.card-header-name{
-    background: #3c3c3ceb;
-    padding: 1px;
+
+.card-header-name {
+    background: var(--secondary-color);
+    padding: 10px;
     width: 100%;
     position: absolute;
     bottom: 0;
     border-radius: 0 0px 10px 10px;
     font-family: auto;
+    line-height: 2em;
+    height: 3em;
+    overflow: hidden;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
 
-.card-header-name>span{
-    text-transform: capitalize;
-    font-weight: 600;
+.card-header-name>span {
+    /* text-transform: uppercase; */
+    font-weight: 500;
+    font-size: large;
 }
 
 /* End Company listing */
