--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-lg">
     <div class="container">
         <a class="navbar-brand" [routerLink]="'/'">
-            <img src="/assets/logo1.png" width="30%" class="d-inline-block align-top" alt="logo">
+            <img src="/assets/ESG.png" class="d-inline-block align-top" alt="logo" style="width: 7rem;">
         </a>
 
         <button class="navbar-toggler custom-toggler ml-auto" type="button" data-bs-toggle="collapse"
